--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <dependency>
             <groupId>org.example</groupId>
             <artifactId>framework</artifactId>
-            <version>1.1-TestingElementUtilsTest</version>
+            <version>1.2-waitAndSendKeysThread</version>
         </dependency>
     </dependencies>
 
