Configure allure lifecycle

--- a/pom.xml
+++ b/pom.xml
@@ -57,9 +57,9 @@
                 </configuration>
                 <executions>
                     <execution>
-                        <phase>test</phase>
+                        <phase>post-integration-test</phase>
                         <goals>
-                            <goal>serve</goal>
+                            <goal>report</goal>
                         </goals>
                     </execution>
                 </executions>
