--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.example</groupId>
-            <artifactId>framework</artifactId>
-            <version>1.3.6+locatorList</version>
+            <groupId>co.com.enequipo.fw</groupId>
+            <artifactId>enequipo</artifactId>
+            <version>2.0.3</version>
         </dependency>
 
         <dependency>
