--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,7 +2,6 @@ pipeline {
     agent any
 
     tools {
-        // Asegúrate de reemplazar 'my-jdk-name' con el nombre de la configuración de JDK que has definido en Jenkins
         jdk 'jdk17'
     }
 
@@ -21,14 +20,14 @@ pipeline {
 
         stage('Test') {
             steps {
-                bat 'mvn test'
+                bat 'mvn clean test surefire-report:report'
             }
         }
     }
 
     post {
         success {
-            echo '¡Successful build!'
+            echo 'Successful build!'
         }
         failure {
             echo 'Failure. Please review the build logs for details'
